pxc/tests/test_025_slice/slimemfunc2.px
namespace slimemfunc2;
import core::common -;
import core::exception -;

{
  set_stack_trace_limit(0);
  try {
    mutable v = make_varray{int}(1, 22, 999, 14);
    const sli = v.range();
    sli[2] = 998;
    println(sli);
    v.push_back(55); // error: would invalidate
  } catch (c_exception ex) {
    println("caught", ex);
  }
}


